add htmlpdf.js package for downloading pdf

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,4 +27,9 @@ body {
 
 .page-break {
   page-break-before: always;
+  break-before: always;
+}
+
+.page-break-marker {
+  break-before: page;
 }
